fix oright side overflow

--- a/src/webapp/static/main.css
+++ b/src/webapp/static/main.css
@@ -83,6 +83,7 @@ text-color {
   border: 4px solid #0978B4;
   width: 80%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .cancer-types {
